# panda_agents

./: app.py  pyproject.toml  requirements.txt  utils.py
src/: emi_calculator.py  excel_analyser.py  quiz_generator.py
