[project]
name = "panda-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "matplotlib>=3.10.6",
    "odfpy>=1.4.1",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "pyxlsb>=1.0.10",
    "streamlit>=1.50.0",
    "xlrd>=2.0.2",
]
